# ML_2

./: pyproject.toml
Codigos/: Ejemplo1.ipynb  Ejemplo2.ipynb  Ejemplo3.ipynb  Ejemplo3_a.ipynb  Ejemplo4.ipynb
Codigos/Session 1_2/: Ejemplo3_a.ipynb  sk_learn_test.ipynb
Codigos/Session 4/: 01_Linear_Algebra_Intuition.ipynb  02_Activation_Functions.ipynb  03_Gradient_Descent.ipynb  Ejercicio4_1.ipynb  Ejercicio4_2.ipynb  Ejercicio4_3.ipynb  Ejercicio4_4.ipynb  Ejercicio4_5.ipynb  Ejercicio4_6.ipynb
Codigos/Session 5/: SoftMax_Tf_Keras.ipynb  cross_entropy_pytorch.ipynb  logistic_regression.ipynb  perceptron_numpy.ipynb  perceptron_pytorch.ipynb  softmax_regression_mnist.ipynb  softmax_regression_scratch.ipynb
Codigos/Session 6/: DB_Comentarios_ML_Abril17.xlsx  Taller_2.ipynb  clasificador_imagenes_papelpiedratijera.ipynb  taller_series_temporales_financieras.ipynb  tutorial_entendiendo_lstm_keras.ipynb
Codigos/Session_3/: 3_1.ipynb  3_2.ipynb  3_3.ipynb
Documentacion/Semana 3/: presentacion5.html  presentacion5.qmd  presentacion5.quarto_ipynb  presentacion6.html  presentacion6.qmd
Documentacion/Semana 4/Presentación/: presentacion7.html  presentacion7.qmd  presentacion8.html  presentacion8.qmd  styles.css
